--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 html,
 body {
+    background: url(https://cdn-wordpress-info.futurelearn.com/info/wp-content/uploads/into-codin.jpg);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -24,6 +25,8 @@ h1,
 h3 {
     margin-bottom: 1rem;
     font-weight: normal;
+    color: white;
+    background-color: black;
 }
 
 img {
